# Linux-SDL2-Boilderplate

./: CMakeLists.txt  README.md
src/: Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  main.cpp
src/entities/: Entity.cpp  Entity.hpp  Ship.cpp  Ship.hpp
src/graphics/: Texture.cpp  Texture.hpp
src/math/: MathUtils.hpp  Rectangle.cpp  Rectangle.hpp  Vector2.cpp  Vector2.hpp
